# data-science-container

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
input/: sample.csv
notebooks/: sample_notebook.ipynb
