[tool.poetry]
name = "data-science-container"
version = "0.1.0"
description = ""
authors = ["abemaru"]
readme = "README.md"
packages = [{include = "data_science_container"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
